--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,14 +26,17 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   background-image: url(../../public/waves.png);
+  background-color: var(--dark-pink-body);
   background-size: cover;
   background-position: center;
   background-attachment: fixed; 
 overflow-x: hidden;
+ 
 }
 
 @layer utilities {
@@ -58,9 +61,7 @@ ul {
 .header {
   padding: 1rem 3rem;
   height: 90vh;
-
-  width: 100vw;
-  z-index: 10;
+  
   position: relative;
   overflow: hidden;
 }
@@ -72,13 +73,7 @@ ul {
   align-items: center;
 }
 
-.logo-text {
-  color: var(--white-color);
-  font-weight: 900;
-  letter-spacing: 1px;
-  font-size: 1.5rem;
-}
-
+ 
 .logo-img {
   width: auto;
   height: 50px;
@@ -133,70 +128,15 @@ ul {
   padding-bottom: 2rem;
 }
 
-
-/* Mangment */
-.mangement {
-  padding: 8rem 3rem;
-  position: relative;
-  overflow: hidden;
-  
-
-}
-
-
-.card-wrapper {
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-
-.mangement-card {
-  border-radius: 1.2rem;
-  width: 90%;
-  background-color: var(--dark-pink);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-
-
-}
-
-.mangement-card-content {
-
-  padding: 2rem;
-}
-
-.mangement-card-content-heading-container {
-  text-align: center;
-}
-
-.mangement-card-content-heading {
-  color: var(--white-color);
-  font-size: 2rem;
-  padding-bottom: 2.5rem;
-}
-
-.mangement-card-content-services {
-  list-style: disc;
-  padding: 2rem;
-
-}
-
-.mangement-card-content-services>li {
-  color: var(--white-color);
-  font-size: 1.5rem;
-}
+ 
 
 /* Contact Section */
 
 .contact-section {
   padding: 7rem 3rem;
  text-align: center;
+ 
+
 }
 
 .contact-heading {
@@ -326,104 +266,12 @@ input::placeholder {
       max-width:600px;
   }
 }
-@media screen and (min-width: 1020px) {
-  .toggle-btn {
-      display: none;
-  }
-  aside {
-      display: none;
-  }
-  
-}
-@media screen and (min-width: 912px) {
-  .toggle-btn {
-      display: none;
-  }
-  aside {
-      display: none;
-  }
-  
-}
-@media screen and (min-width: 850px) {
-  .toggle-btn {
-      display: none;
-  }
-  aside {
-      display: none;
-  }
-  
-}
-@media screen and (min-width: 820px) {
-  .toggle-btn {
-      display: none;
-  }
-  aside {
-      display: none;
-  }
-  
-}
+ 
+ 
 
-
-@media screen and (max-width: 768px) {
-  .logo-img {
-      display: none;
-       
-  }
-  
-  .links {
-      display: none;
-      
-      
-  }
-  
-}
-
-
-/* Toggle Nav */
-
-.nav-toggle {
-  background-color: transparent;
-  border: transparent;
-  color: var(--white-color);
-  font-size: 1.5rem;
-}
-aside {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: var(--dark-pink-body);
-  height: 100vh;
-  width: 200px;
-  right:    1500px;
-  position: fixed;
-  z-index: 15;
-  transition: all 0.4s ease;
-}
-
-aside.active {
-  right: 0;
-}
-
-.nav-links {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-}
-
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  background-color: transparent;
-  border: transparent;
-  color: var(--white-color);
-  font-size: 2rem;
-}
-
-::-webkit-scrollbar {
+ 
+ 
+/* ::-webkit-scrollbar {
  display: none;
 }
 ::-webkit-scrollbar-track {
@@ -431,4 +279,4 @@ aside.active {
 }
 ::-webkit-scrollbar-thumb {
   display: none;
-}
+} */
