--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,14 +30,35 @@ html {
 }
 
 body {
-  background-image: url(../../public/waves.png);
+  position: relative;
+  overflow-x: hidden;
   background-color: var(--dark-pink-body);
+  min-height: 100vh; /* Ensure it covers at least the whole viewport */
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../public/waves.png);
   background-size: cover;
-  
+  background-repeat: no-repeat;
+  z-index: -1; /* Keep the background behind the content */
+  background-color: rgba(227, 82, 112, 0.7);
+  mix-blend-mode:  overlay;
+}
+/* body {
+  background-image: url(../../public/waves.png);
+ 
+  background-size: cover;
+  background-attachment: fixed;
  
   overflow-x: hidden;
-
-}
+  background-color: var(--dark-pink-body);
+} */
 
 @layer utilities {
   .text-balance {
@@ -59,13 +80,16 @@ ul {
 }
 
 .header {
+  
   padding: 1rem 3rem;
   height: 100vh;
- background-color: rgba(227, 82, 111, 0.274);
+   
+ 
   position: relative;
   overflow: hidden;
 }
 
+ 
 .navbar {
   display: flex;
   padding: 1rem 6rem;
@@ -133,7 +157,9 @@ ul {
   padding-bottom: 2rem;
 }
 
-
+.about {
+   
+}
 
 /* Contact Section */
 
